add hjust/vjust arguments

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ library(naracollide)
 
 <!-- badges: start -->
 ![](https://img.shields.io/badge/cool-useless-green.svg)
+[![R-CMD-check](https://github.com/coolbutuseless/naracollide/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/coolbutuseless/naracollide/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 `{naracollide}` is for detecting collisions between native raster objects
@@ -56,8 +57,8 @@ screen <- nr_new(200, 200, 'grey90')
 
 # The R logo as a native raster
 logo  <- png::readPNG(system.file("img", "Rlogo.png", package="png"), native = TRUE)
-xlogo <- 50
-ylogo <- 50
+xlogo <- 100
+ylogo <-  90
 
 # Set up the 4 circular targets
 targets <- lapply(1:4, function(i) {
@@ -65,16 +66,16 @@ targets <- lapply(1:4, function(i) {
   nr_circle(target, 10, 10, 10, c('firebrick', 'darkblue', 'darkgreen', 'black')[i])
 })
 
-xtargets <- c(40,  40, 140, 140)
-ytargets <- c(40, 140,  40, 140)
+xtargets <- c(50,  50, 150, 150)
+ytargets <- c(50, 150,  50, 150)
 
 # Draw the targets
 for (i in seq_along(targets)) {
-  nr_blit(screen, xtargets[i], ytargets[i], targets[[i]])
+  nr_blit(screen, xtargets[i], ytargets[i], targets[[i]], hjust = 0.5, vjust = 0.5)
 }
 
 # Draw the logo
-nr_blit(screen, xlogo, ylogo, logo)
+nr_blit(screen, xlogo, ylogo, logo, hjust = 0.5, vjust = 0.5)
 
 # Show the screen
 plot(screen, T)
@@ -83,17 +84,17 @@ plot(screen, T)
 
 ```{r bbox, fig.height = 3}
 # Setup collision detection
-coldf <- col_setup(targets, xtargets, ytargets)
+coldf <- col_setup(targets, xtargets, ytargets, hjust = 0.5, vjust = 0.5)
 
 # Check for bounding box intersection
 # Two `TRUE` values so there are 2 intersections
 # out of the possible 4 objects to intersect with.
-# Intesection is with the 1st and 3rd targets
-col_detect_broad(logo, xlogo, ylogo, coldf)
+# Intersection is with the 1st and 3rd targets
+col_detect_broad(logo, xlogo, ylogo, coldf, hjust = 0.5, vjust = 0.5)
 
 # Check for overlapping pixels  
-# All values are `FALSE` so there are no overlapping pixels
-col_detect_narrow(logo, xlogo, ylogo, coldf)
+# All values are `FALSE` as there are no overlapping pixels
+col_detect_narrow(logo, xlogo, ylogo, coldf, hjust = 0.5, vjust = 0.5)
 ```
 
 ### View bounding boxes
@@ -106,8 +107,8 @@ two `TRUE` values returned by `col_detect_broad()`
 by `col_detect_narrow()` are `FALSE`
 
 ```{r fig.height = 3}
-nr_rect(screen, xlogo, ylogo, ncol(logo), nrow(logo), fill = NA, color = 'black')
-nr_rect(screen, xtargets, ytargets, 21, 21, fill = NA, color = 'grey50')
+nr_rect(screen, xlogo, ylogo, ncol(logo), nrow(logo), fill = NA, color = 'black', hjust = 0.5, vjust = 0.5)
+nr_rect(screen, xtargets, ytargets, 21, 21, fill = NA, color = 'grey50', hjust = 0.5, vjust = 0.5)
 
 plot(screen, T)
 ```
