--- a/README.Rmd
+++ b/README.Rmd
@@ -114,6 +114,47 @@ plot(screen, T)
 ```
 
 
+## Benchmark
+
+Search for collisions of a `primary` native raster against a backdrop of 100 `secondary`
+native rasters.
+
+For moving `secondary` objects - where the `col_setup()` structure needs to be
+created each time, checking for collisions runs about 50k times/second (Apple M2).
+
+When the `secondary` objects are known to be stationary (and the `col_setup()` structure 
+only needs to be created once), checking for collisions runs about 500k times/second (Apple M2).
+
+```{r}
+library(nara)
+library(naracollide)
+primary <- nr_new(20, 20)
+
+N <- 100
+secondary <- lapply(seq_len(N), function(x) nr_new(20, 20))
+x <- sample(400, N, T)
+y <- sample(400, N, T)
+
+
+coldf <- col_setup(nr_list = secondary, x = x, y = y)
+col_detect_narrow(primary, 0, 0, coldf)
+
+
+bench::mark({
+  coldf <- col_setup(nr_list = secondary, x = x, y = y)
+  col_detect_narrow(primary, 0, 0, coldf)
+})
+
+# If the 'secondary' objects are stationary, the `col_setup()` does not
+# need to be run each time.
+bench::mark({
+  col_detect_narrow(primary, 0, 0, coldf)
+})
+```
+
+
+
+
 ## Animated Example
 
 ![logo bounce](man/figures/logo-bounce.gif)
